--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -18,7 +18,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-        pip install pylint ./src
+        pip install pylint src
     - name: Analysing the code with pylint
       run: |
         pylint `ls -R|grep .py$|xargs`
