--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -25,4 +25,6 @@ jobs:
     - name: Running unit tests
       run: |
         cd src && python -m unittest && cd ..
+      env: 
+        STOCKAPPTOKEN: ${{STOCKAPPTOKEN}}
       
