--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -25,6 +25,5 @@ jobs:
     - name: Running unit tests
       run: |
         cd src && python -m unittest && cd ..
-      env: 
-        STOCKAPPTOKEN: ${{STOCKAPPTOKEN}}
-      
+      env:
+        STOCKAPPTOKEN: ${{secrets.STOCKAPPTOKEN}}
