--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -31,3 +31,5 @@ jobs:
     - name: Running test coverage report
       run : |
         cd src && python -m coverage run -m unittest && python -m coverage report && cd ..
+      env:
+        STOCKAPPTOKEN: ${{secrets.STOCKAPPTOKEN}}
